--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,6 @@ nav ul li a i {
   margin-left: 1%;
   width: 30vw;
   height: 100%;
-
 }
 
 .about_me_main h1 {
@@ -354,7 +353,10 @@ nav ul li a i {
   height: 80vh;
 }
 
-.galery_page_all {
+.galery_page_1,
+.galery_page_2,
+.galery_page_3,
+.galery_page_4 {
   display: flex;
   flex-wrap: wrap;
   flex-grow: 1;
@@ -362,52 +364,10 @@ nav ul li a i {
   align-content: space-around;
 }
 
-.galery_page_all span {
-  display: flex;
-  width: 33%;
-  height: 33%;
-  background-color: #BBBBBB;
-}
-
-.galery_page_shoot {
-  display: flex;
-  flex-wrap: wrap;
-  flex-grow: 1;
-  justify-content: space-around;
-  align-content: space-around;
-}
-
-.galery_page_shoot span {
-  display: flex;
-  width: 33%;
-  height: 33%;
-  background-color: #BBBBBB;
-}
-
-.galery_page_makeup {
-  display: flex;
-  flex-wrap: wrap;
-  flex-grow: 1;
-  justify-content: space-around;
-  align-content: space-around;
-}
-
-.galery_page_makeup span {
-  display: flex;
-  width: 33%;
-  height: 33%;
-  background-color: #BBBBBB;
-}
-
-.galery_page_fromwork {
-  display: flex;
-  flex-wrap: wrap;
-  flex-grow: 1;
-  justify-content: space-around;
-  align-content: space-around;
-}
-
-.galery_page_fromwork span {
+.galery_page_1 span,
+.galery_page_2 span,
+.galery_page_3 span,
+.galery_page_4 span {
   display: flex;
   width: 33%;
   height: 33%;
@@ -545,7 +505,6 @@ nav ul li a i {
   height: 5vh;
   width: 50vw;
   font-size: 16px;
-
 }
 
 .serwises_page_1 span,
@@ -677,6 +636,8 @@ nav ul li a i {
 /*********CENNIK*********/
 /************************/
 
+
+
 .price_wraper {
   display: flex;
   margin-top: 5%;
@@ -691,7 +652,6 @@ nav ul li a i {
   background-color: #252525;
   width: 30vw;
   height: 80vh;
-
 }
 
 .price_main h1 {
@@ -810,7 +770,7 @@ nav ul li a i {
 }
 
 .price span i {
-  border: 15px solid  #d86232;
+  border: 15px solid #d86232;
   height: 150px;
   width: 150px;
   border-radius: 50%;
@@ -820,7 +780,7 @@ nav ul li a i {
   line-height: 110px;
 }
 
-.price span a { 
+.price span a {
   margin-top: 10%;
   font-size: 25px;
   line-height: 40px;
@@ -998,491 +958,535 @@ footer {
 
 
 @media screen and (max-width: 300px) {
-body{
-width: 300px;
-font-size: 6px;
-flex-direction: column;
+  body {
+    width: 300px;
+    font-size: 6px;
+    flex-direction: column;
+  }
+
+
+
+  main {
+    flex-direction: column;
+  }
+
+  section {
+    flex-direction: column;
+    margin-left: 0px;
+    width: 300px;
+  }
+
+
+  aside {
+    flex-basis: 30%;
+  }
+
+  nav {
+    display: flex;
+    flex-basis: 100%;
+    justify-content: center;
+
+    margin-left: 0%;
+    align-items: center;
+  }
+
+  nav ul {
+    flex-direction: column;
+  }
+
+  nav ul li ::before {
+  display: none;
+  }
+  
+  nav ul li ::after {
+   display: none;
+  }
+  
+  nav ul  :hover {
+    background-color:  #b3745ca4;
+
+  }
+
+  /************************/
+/*****STRONA GŁÓWNA******/
+/************************/
+
+.main_wraper {
+  display: flex;
+  width: 300px;
+  height: 300px;
 }
 
-main{
+.main_wraper img {
+  display: flex;
+  right: 0%;
+  width: 300px;
+}
+
+.main_wraper div {
+  display :none;
+}
+
+/************************/
+/*********O MNIE*********/
+/************************/
+
+#about_me {
+  display: flex;
+}
+
+.about_me_wraper {
+  display: flex;
+  align-items: center;
+  width: 300px;
+  height: 450px;
   flex-direction: column;
 }
 
-section{
-flex-direction: column ;
-margin-left: 0px;
-width: 300px;
-}
+.about_me_main {
 
 
-aside{
-  
-flex-basis: 30%;
-  
-}
-
-nav ul{
-flex-direction: column;
-
-}
-
-/************************/
-/*********USŁUGI*********/
-/************************/
-
-
-
-.serwises_wraper {
+  margin-left: 0%;
   width: 300px;
-  height: 1200px;
-  flex-direction: column-reverse;
+  height: 100px;
 }
 
-.serwises {
-  width: 300px;
-  height: 950px;
-}
-.serwises_main {
-  width: 300px;
-  height: 200px;
-}
-
-.serwises_main h1 {
+.about_me_main h1 {
   top: 5%;
   left: 15%;
+}
+
+.about_me_main p {
+  vertical-align: initial;
+  top: 10px;
+  left: 10px;
+  transform: rotate(0deg);
+  letter-spacing: 10px;
   position: absolute;
 }
 
-.serwises_main p {
-  vertical-align: initial;
-  top: 1%;
-  left: 15%;
-  transform: rotate(0deg);
-  letter-spacing: 10px;
-  font-weight: 700;
-  color: #3C3C3C;
-
+.about_me_img {
+  display: none;
 }
 
-.serwises_main ul {
-  flex-direction: column;
-  color: white;
-  top: 30%;
-  left: 5%;
-}
-
-
-.serwises_main ul li a {
-  display: flex;
-  text-decoration: none;
-  font-size: 10px;
-  font-family: 'Rajdhani', sans-serif;
-  color: white;
-  text-transform: uppercase;
-  margin-bottom: 5px;
-}
-
-.serwises_main ul li a:hover {
-  color: #d86232;
-}
-
-
-
-.serwises_page_1,
-.serwises_page_2,
-.serwises_page_3,
-.serwises_page_4,
-.serwises_page_5,
-.serwises_page_6,
-.serwises_page_7 {
-  display: flex;
-  flex-wrap: wrap;
-  flex-grow: 1;
-  font-size: 8px;
-  text-transform: none;
-  justify-content: space-around;
-  align-content: space-around;
-  text-align: justify;
-}
-
-.serwises_page_1 h1,
-.serwises_page_2 h1,
-.serwises_page_3 h1,
-.serwises_page_4 h1,
-.serwises_page_5 h1,
-.serwises_page_6 h1,
-.serwises_page_7 h1 {
-  height: 30px;
+.about_me_txt {
   width: 300px;
-  font-size: 16px;
-
+  transform: translate(0%, 0%);
 }
 
-.serwises_page_1 span,
-.serwises_page_2 span,
-.serwises_page_3 span,
-.serwises_page_4 span,
-.serwises_page_5 span,
-.serwises_page_6 span,
-.serwises_page_7 span {
-  display: flex;
-  font-size: 10px;
-  width: 280px;
-  height: 100px;
-  background-color: #BBBBBB;
-  padding: 5px;
-  line-height: 15px;
-  transform: scale(1, 1);
-  text-align: left;
-  overflow: hidden;
-  z-index: 80;
-  flex-direction: column;
-  text-align: justify;
-}
-
-.serwises_page_1 span h1,
-.serwises_page_2 span h1,
-.serwises_page_3 span h1,
-.serwises_page_4 span h1,
-.serwises_page_5 span h1,
-.serwises_page_6 span h1,
-.serwises_page_7 span h1 {
-  color: #d86232;
-  font-size: 12px;
-  margin-bottom: 4px;
-  border-bottom: 1px solid #d86232;
-  width: 100%
-}
-
-.serwises_page_1 span i,
-.serwises_page_2 span i,
-.serwises_page_3 span i,
-.serwises_page_4 span i,
-.serwises_page_5 span i,
-.serwises_page_6 span i,
-.serwises_page_7 span i {
-  color: #d86232;
-  text-align: end;
-  font-size: 12px;
-  margin-top: 3px;
-
-}
-
-
-.serwises_page_1 span:hover,
-.serwises_page_2 span:hover,
-.serwises_page_3 span:hover,
-.serwises_page_4 span:hover,
-.serwises_page_5 span:hover,
-.serwises_page_6 span:hover,
-.serwises_page_7 span:hover {
-  cursor: pointer;
-  overflow: visible;
-  z-index: 81;
-  transition: all ease 0.3s;
-}
-
-
-.serwises_page_1 span:after,
-.serwises_page_2 span:after,
-.serwises_page_3 span:after,
-.serwises_page_4 span:after,
-.serwises_page_5 span:after,
-.serwises_page_6 span:after,
-.serwises_page_7 span:after {
-  z-index: -1;
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
+.about_me_txt p {
+  margin-top: 10px;
   width: 100%;
-  height: 100%;
-  background: white;
-  /*background:#BBBBBB;*/
-  transition: all ease 0.5s;
-  box-shadow: inset 0px -44px 30px -15px rgba(129, 66, 30, 0.10);
-}
-
-
-
-.serwises_page_1 span:hover:after,
-.serwises_page_2 span:hover:after,
-.serwises_page_3 span:hover:after,
-.serwises_page_4 span:hover:after,
-.serwises_page_5 span:hover:after,
-.serwises_page_6 span:hover:after,
-.serwises_page_7 span:hover:after {
-  width: 100%;
-  height: 220%;
-  overflow: visible;
-  transform-origin: top;
-  box-shadow: 0px 0px 5px -2px rgba(0, 0, 0, 0.75);
-}
-
-/************************/
-/********CENNIK**********/
-/************************/
-
-#price {
-  width: 300px;
-  margin: 0;
-  
-}
-.price_wraper {
-  display: flex;
-  margin-top: 5px;
-  text-decoration: none;
-  flex-direction: column;
-  width: 300px;
-  height: 2900px;
-  
-}
-
-.price_main {
-  position: relative;
-  background-color: #252525;
-  width: 300px;
-  height: 200px;
-  justify-content: center;
-  align-items: center;  
-  margin-left: 0;
-  flex-direction: row;
-}
-
-.price_main h1 {
-  color: #3C3C3C;
-  font-size: 30px;
-  top: 10px;
-  left: 20%;
-}
-
-.price_main p {
-  vertical-align: initial;
-  transform: rotate(0deg);
-  letter-spacing: 10px;
-  top: 10px;
-  left: 35%;
-  font-weight: 700;
-  font-size: 30px;
-}
-
-.price_main ul {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex-grow: 1;
-  color: white;
-  position: relative;
-  top: 15px;
-  left: 3%;
-  
-}
-
-.price_main ul li a {
-  font-size: 10px;
-  margin-bottom: 5px;
-}
-
-.price_main ul li a:hover {
-  color: #d86232;
-}
-
-.price {
-  flex-direction: column;
-  width: 300px;
-  height: 450px;
-}
-
-.price_page_1,
-.price_page_2,
-.price_page_3,
-.price_page_4,
-.price_page_5,
-.price_page_6,
-.price_page_7 {
-  display: flex;
-  height: 450px;
-  flex-wrap: wrap;
-
-}
-
-.price_page_1 span:nth-child(1),
-.price_page_2 span:nth-child(1),
-.price_page_3 span:nth-child(1),
-.price_page_4 span:nth-child(1),
-.price_page_5 span:nth-child(1),
-.price_page_6 span:nth-child(1),
-.price_page_7 span:nth-child(1) {
-  width: 300px;
-  height: 100px;
-  border: 1px solid #BBBBBB;
-  margin-left: 0px;
-}
-
-.price_page_1 span:nth-child(2),
-.price_page_2 span:nth-child(2),
-.price_page_3 span:nth-child(2),
-.price_page_4 span:nth-child(2),
-.price_page_5 span:nth-child(2),
-.price_page_6 span:nth-child(2),
-.price_page_7 span:nth-child(2) {
-  width: 300px;
-  height: 350px;
-  border: 1px solid #BBBBBB;
-  margin-left: 0px;
-}
-
-.price span ul {
-  margin-top: 10px;
-  margin-left: 10px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
-}
-
-.price span ul li {
-  margin-left: 0px;
-  font-size: 10px;
-  letter-spacing: 2px;
-  text-align: left;
-  line-height: 20px;
-}
-
-.price_left {
- 
-  width: 300px;
-  height: 150px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.price_right {
-  display: flex;
-  width: 300px;
-  height: 350px;
-  flex-direction: column;
-  align-items: left;
-  justify-content: flex-start;
-}
-
-.price span i {
-  border: 0px solid  #d86232;
-  height: 0px;
-  width: 0px;
-  border-radius: 0%;
-  margin-top: 10px;
-  
-  font-size: 10px;
-  line-height: 20px;
-}
-
-.price span a { 
-  margin-top: 10%;
-  font-size: 10px;
-  line-height: 15px;
-}
-
-/************************/
-/********STOPKA**********/
-/************************/
-
-footer {
-
-  background-color: black;
-  height: 520px;
-  width: 300px;
-  flex-direction: column;
   font-size: 12px;
+}
+
+.about_me_txt h1 {
+  font-size: 0px;
+  margin: 10px;
+}
+
+  /************************/
+  /********GALERIA*********/
+  /************************/
+
+  .galery_wraper {
+    width: 300px;
+    height: 1200px;
+    flex-direction: column;
+
+  }
+
+  .galery_main {
+    width: 300px;
+    height: 300px;
+  }
+
+  .galery_main h1 {
+    top: 5%;
+  }
+
+  .galery_main p {
+    vertical-align: initial;
+    top: 10px;
+    left: 10px;
+    transform: rotate(0deg);
+    letter-spacing: 10px;
+  }
+
+  .galery_main ul {
+    top: 30%;
+    left: 5%;
+  }
+
+
+  .galery_main ul li a {
+    display: flex;
+    text-decoration: none;
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
+
+
+  .galery {
+    width: 300px;
+    height: 2600px;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    justify-content: center;
+  }
+
+  .galery_page_1,
+  .galery_page_2,
+  .galery_page_3,
+  .galery_page_4 {
+    flex-wrap: nowrap;
+    margin-top: 10px;
+    flex-grow: 0;
+    flex-direction: column;
+
+  }
+
+  .galery_page_1 span,
+  .galery_page_2 span,
+  .galery_page_3 span,
+  .galery_page_4 span {
+    display: flex;
+    width: 270px;
+    height: 55%;
+    margin-top: 5px;
+    background-color: #BBBBBB;
+
+  }
+
+
+  /************************/
+  /*********USŁUGI*********/
+  /************************/
+
+
+
+  .serwises_wraper {
+    width: 300px;
+    height: 1200px;
+    flex-direction: column-reverse;
+  }
+
+  .serwises {
+    width: 300px;
+    height: 950px;
+  }
+
+  .serwises_main {
+    width: 300px;
+    height: 200px;
+  }
+
+  .serwises_main h1 {
+    top: 5%;
+    left: 15%;
+  }
+
+  .serwises_main p {
+    vertical-align: initial;
+    top: 1%;
+    left: 15%;
+    transform: rotate(0deg);
+    letter-spacing: 10px;
+  }
+
+  .serwises_main ul {
+    flex-direction: column;
+    top: 30%;
+    left: 5%;
+  }
+
+
+  .serwises_main ul li a {
+    font-size: 10px;
+    margin-bottom: 5px;
+  }
+
+  .serwises_page_1,
+  .serwises_page_2,
+  .serwises_page_3,
+  .serwises_page_4,
+  .serwises_page_5,
+  .serwises_page_6,
+  .serwises_page_7 {
+    font-size: 8px;
+  }
+
+  .serwises_page_1 h1,
+  .serwises_page_2 h1,
+  .serwises_page_3 h1,
+  .serwises_page_4 h1,
+  .serwises_page_5 h1,
+  .serwises_page_6 h1,
+  .serwises_page_7 h1 {
+    height: 30px;
+    width: 300px;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 10px;
+    align-self: center;
+  }
+
+  .serwises_page_1 span,
+  .serwises_page_2 span,
+  .serwises_page_3 span,
+  .serwises_page_4 span,
+  .serwises_page_5 span,
+  .serwises_page_6 span,
+  .serwises_page_7 span {
+    font-size: 10px;
+    width: 280px;
+    height: 100px;
+    padding: 5px;
+    line-height: 15px;
+  }
+
+  .serwises_page_1 span h1,
+  .serwises_page_2 span h1,
+  .serwises_page_3 span h1,
+  .serwises_page_4 span h1,
+  .serwises_page_5 span h1,
+  .serwises_page_6 span h1,
+  .serwises_page_7 span h1 {
+    font-size: 12px;
+    margin-bottom: 4px;
+    width: 300px;
+  }
+
+  .serwises_page_1 span i,
+  .serwises_page_2 span i,
+  .serwises_page_3 span i,
+  .serwises_page_4 span i,
+  .serwises_page_5 span i,
+  .serwises_page_6 span i,
+  .serwises_page_7 span i {
+    font-size: 12px;
+    margin-top: 3px;
+
+  }
+
+  /************************/
+  /********CENNIK**********/
+  /************************/
+
+  #price {
+    width: 300px;
+    margin: 0;
+
+  }
+
+  .price_wraper {
+    margin-top: 5px;
+    flex-direction: column;
+    width: 300px;
+    height: 700px;
+
+  }
+
+  .price_main {
+    width: 300px;
+    height: 200px;
+    margin-left: 0;
+    flex-direction: row;
+  }
+
+  .price_main h1 {
+    font-size: 30px;
+    top: 10px;
+    left: 20%;
+  }
+
+  .price_main p {
+    vertical-align: initial;
+    transform: rotate(0deg);
+    letter-spacing: 10px;
+    top: 10px;
+    left: 35%;
+    font-size: 30px;
+  }
+
+  .price_main ul {
+    position: relative;
+    top: 15px;
+    left: 3%;
+  }
+
+  .price_main ul li a {
+    font-size: 10px;
+    margin-bottom: 5px;
+  }
+
+
+  .price {
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 300px;
+    height: 450px;
+  }
+
+  .price_page_1,
+  .price_page_2,
+  .price_page_3,
+  .price_page_4,
+  .price_page_5,
+  .price_page_6,
+  .price_page_7 {
+    width: 300px;
+    height: 450px;
+    flex-direction: column;
+  }
+
+  .price_page_1 span:nth-child(1),
+  .price_page_2 span:nth-child(1),
+  .price_page_3 span:nth-child(1),
+  .price_page_4 span:nth-child(1),
+  .price_page_5 span:nth-child(1),
+  .price_page_6 span:nth-child(1),
+  .price_page_7 span:nth-child(1) {
+    width: 300px;
+    height: 100px;
+    margin-left: 0px;
+  }
+
+  .price_page_1 span:nth-child(2),
+  .price_page_2 span:nth-child(2),
+  .price_page_3 span:nth-child(2),
+  .price_page_4 span:nth-child(2),
+  .price_page_5 span:nth-child(2),
+  .price_page_6 span:nth-child(2),
+  .price_page_7 span:nth-child(2) {
+    width: 300px;
+    height: 350px;
+    margin-left: 0px;
+  }
+
+  .price span ul {
+    margin-top: 10px;
+    margin-left: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+
+  .price span ul li {
+    margin-left: 0px;
+    font-size: 10px;
+    letter-spacing: 2px;
+    line-height: 20px;
+  }
+
+
+  .price span i {
+    border: 0px solid #d86232;
+    height: 0px;
+    width: 0px;
+    border-radius: 0%;
+    margin-top: 10px;
+    font-size: 10px;
+    line-height: 20px;
+  }
+
+  .price span a {
+    font-size: 10px;
+    line-height: 15px;
+  }
+
+  /************************/
+  /********STOPKA**********/
+  /************************/
+
+  footer {
+
+    background-color: black;
+    height: 520px;
+    width: 300px;
+    flex-direction: column;
+    font-size: 12px;
+
+  }
+
+  .footer_wraper {
+    margin-top: 5px;
+    flex-direction: column;
+  }
+
+  .footer_adress {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 0%;
+    margin-left: 0px;
+    margin-top: 0px;
+    line-height: 10px;
+  }
+
+  .footer_price {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5px;
+    height: 5%;
+    line-height: 10px;
+  }
+
+  .footer_price h1 {
+    font-size: 10px;
+    margin-bottom: 5px;
+    letter-spacing: 2px;
+  }
+
+  .footer_price ul {
+    font-size: 10px;
+  }
+
+  .footer_email {
+    flex-direction: column;
+    flex-grow: 1;
+    flex-basis: 5%;
+    margin: 0px 0px 0px 0px;
+    line-height: 15px;
+  }
+
+  .footer_email div {
+    margin-top: 10px;
+    letter-spacing: 10px;
+  }
+
+  .footer_email i {
+    font-size: 30px;
+  }
+
+  .footer_email a[Alt_title]:after {
+    font-size: 10px;
+  }
+
+  .footer_email a[alt_title] {
+    position: relative;
+  }
+
+  .footer_allrights {
+    background-color: black;
+    height: 10vh;
+    margin: 10px 10px 5px 10px;
+  }
+
+  .footer_map {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .footer_map img {
+    justify-items: center;
+    width: 85%;
+  }
 
 }
 
-.footer_wraper {
-  margin-top: 5px;
-
-  flex-direction: column;
-}
-
-.footer_adress {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 0%;
-  margin-left: 0px;
-  margin-top: 0px;
-  line-height: 10px;
-}
-
-.footer_price {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 5px;
-  height: 5%;
-  line-height: 10px;
-}
-
-.footer_price h1 {
-  font-size: 10px;
-  margin-bottom: 5px;
-  letter-spacing: 2px;
-}
-
-.footer_price ul {
-  font-size: 10px;
-}
-
-.footer_email {
-  flex-direction: column;
-  flex-grow: 1;
-  flex-basis: 5%;
-  margin: 0px 0px 0px 0px;
-  line-height: 15px;
-}
-
-.footer_email div {
-  margin-top: 10px;
-  letter-spacing: 10px;
-}
-
-.footer_email i {
-  font-size: 30px;
-}
-
-.footer_email i:hover {
-  
-}
-
-.footer_email a[alt_title]:hover:after {
-}
-
-.footer_email a[Alt_title]:after {
-  font-size: 10px;
-}
-
-.footer_email a[alt_title] {
-  position: relative;
-}
-
-.footer_allrights {
-  background-color: black;
-  height: 10vh;
-  margin: 10px 10px 5px 10px;
-}
-
-.footer_map {
-  margin-top: 10px;
- margin-bottom: 10px;
-}
-
-.footer_map img {
-  justify-items: center;
-  width: 85%;
-}
-
-}
- 
 
 @media screen and (min-width: 591px) and (max-width: 785px) {}
 
