--- a/css/style.css
+++ b/css/style.css
@@ -955,7 +955,9 @@ footer {
   transition: ease .5s;
 }
 
-
+/*************************************/
+/*****ELEMENTY HTML*******************/
+/*************************************/
 
 @media screen and (max-width: 300px) {
   body {
@@ -1487,8 +1489,534 @@ footer {
 
 }
 
+/*************************************/
+/*****komórka 2*******************/
+/*************************************/
 
-@media screen and (min-width: 591px) and (max-width: 785px) {}
+@media screen and (min-width: 591px) and (max-width: 785px) {
+
+  body {
+    width: 100%;
+    font-size: 6px;
+    flex-direction: column;
+  }
+
+  main {
+    flex-direction: column;
+  }
+
+  section {
+    flex-direction: column;
+    margin-left: 0px;
+    width: 100%;
+  }
+
+  aside {
+    flex-basis: 30%;
+  }
+
+  nav {
+    display: flex;
+    flex-basis: 100%;
+    justify-content: center;
+    margin-left: 0%;
+    align-items: center;
+  }
+
+  nav ul {
+    flex-direction: column;
+  }
+
+  nav ul li ::before {
+  display: none;
+  }
+  
+  nav ul li ::after {
+   display: none;
+  }
+  
+  nav ul  :hover {
+    background-color:  #b3745ca4;
+
+  }
+
+  /************************/
+/*****STRONA GŁÓWNA******/
+/************************/
+
+.main_wraper {
+  display: flex;
+  width: 100%;
+  height: 400px;
+}
+
+.main_wraper img {
+  display: flex;
+  right: 0%;
+  width: 100%;
+}
+
+.main_wraper div {
+  display :none;
+}
+
+/************************/
+/*********O MNIE*********/
+/************************/
+
+#about_me {
+  display: flex;
+}
+
+.about_me_wraper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 600px;
+  flex-direction: column;
+}
+
+.about_me_main {
+  margin-left: 0%;
+  width: 100%;
+  height: 500px;
+}
+
+.about_me_main h1 {
+  top: 5%;
+  left: 15%;
+}
+
+.about_me_main p {
+  vertical-align: initial;
+  top: 10px;
+  left: 10px;
+  transform: rotate(0deg);
+  letter-spacing: 10px;
+  position: absolute;
+}
+
+.about_me_img {
+  display: none;
+}
+
+.about_me_txt {
+  width: 100%;
+  transform: translate(0%, 0%);
+}
+
+.about_me_txt p {
+  margin-top: 10px;
+  width: 100%;
+  font-size: 14px;
+}
+
+.about_me_txt h1 {
+  font-size: 0px;
+  margin: 10px;
+}
+
+  /************************/
+  /********GALERIA*********/
+  /************************/
+
+  .galery_wraper {
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+
+  }
+
+  .galery_main {
+    width: 100%;
+    height: 200px;
+  }
+
+  .galery_main h1 {
+    top: 5%;
+  }
+
+  .galery_main p {
+    vertical-align: initial;
+    top: 10px;
+    left: 10px;
+    transform: rotate(0deg);
+    letter-spacing: 10px;
+  }
+
+  .galery_main ul {
+    top: 30%;
+    left: 5%;
+  }
+
+
+  .galery_main ul li a {
+    display: flex;
+    text-decoration: none;
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
+
+
+  .galery {
+    width: 100%;
+    height: auto;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    justify-content: center;
+  }
+
+  .galery_page_1,
+  .galery_page_2,
+  .galery_page_3,
+  .galery_page_4 {
+    flex-wrap: nowrap;
+    margin-top: 10px;
+    flex-grow: 0;
+    flex-direction: column;
+
+  }
+
+  .galery_page_1 span,
+  .galery_page_2 span,
+  .galery_page_3 span,
+  .galery_page_4 span {
+    display: flex;
+    width: 80vw;
+    height: 300px;
+    margin-top: 5px;
+    background-color: #BBBBBB;
+
+  }
+
+
+  /************************/
+  /*********USŁUGI*********/
+  /************************/
+
+
+
+  .serwises_wraper {
+    width: 100%;;
+    height: 1200px;
+    flex-direction: column-reverse;
+  }
+
+  .serwises {
+    width: 100%;
+    height: 950px;
+  }
+
+  .serwises_main {
+    width: 100%;
+    height: 200px;
+  }
+
+  .serwises_main h1 {
+    top: 5%;
+    left: 15%;
+  }
+
+  .serwises_main p {
+    vertical-align: initial;
+    top: 1%;
+    left: 15%;
+    transform: rotate(0deg);
+    letter-spacing: 10px;
+  }
+
+  .serwises_main ul {
+    flex-direction: column;
+    top: 30%;
+    left: 5%;
+  }
+
+
+  .serwises_main ul li a {
+    font-size: 10px;
+    margin-bottom: 5px;
+  }
+
+  .serwises_page_1,
+  .serwises_page_2,
+  .serwises_page_3,
+  .serwises_page_4,
+  .serwises_page_5,
+  .serwises_page_6,
+  .serwises_page_7 {
+    font-size: 8px;
+  }
+
+  .serwises_page_1 h1,
+  .serwises_page_2 h1,
+  .serwises_page_3 h1,
+  .serwises_page_4 h1,
+  .serwises_page_5 h1,
+  .serwises_page_6 h1,
+  .serwises_page_7 h1 {
+    height: 30px;
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 10px;
+    align-self: center;
+  }
+
+  .serwises_page_1 span,
+  .serwises_page_2 span,
+  .serwises_page_3 span,
+  .serwises_page_4 span,
+  .serwises_page_5 span,
+  .serwises_page_6 span,
+  .serwises_page_7 span {
+    font-size: 10px;
+    width: 85%;
+    height: 100px;
+    padding: 5px;
+    line-height: 15px;
+  }
+
+  .serwises_page_1 span h1,
+  .serwises_page_2 span h1,
+  .serwises_page_3 span h1,
+  .serwises_page_4 span h1,
+  .serwises_page_5 span h1,
+  .serwises_page_6 span h1,
+  .serwises_page_7 span h1 {
+    font-size: 12px;
+    margin-bottom: 4px;
+    width: 100%;
+  }
+
+  .serwises_page_1 span i,
+  .serwises_page_2 span i,
+  .serwises_page_3 span i,
+  .serwises_page_4 span i,
+  .serwises_page_5 span i,
+  .serwises_page_6 span i,
+  .serwises_page_7 span i {
+    font-size: 12px;
+    margin-top: 3px;
+
+  }
+
+  /************************/
+  /********CENNIK**********/
+  /************************/
+
+  #price {
+    width: 100%;
+    margin: 0;
+
+  }
+
+  .price_wraper {
+    margin-top: 5px;
+    flex-direction: column;
+    width: 100%;
+    height: 700px;
+
+  }
+
+  .price_main {
+    width: 100%;
+    height: 200px;
+    margin-left: 0;
+    flex-direction: row;
+  }
+
+  .price_main h1 {
+    font-size: 30px;
+    top: 10px;
+    left: 20%;
+  }
+
+  .price_main p {
+    vertical-align: initial;
+    transform: rotate(0deg);
+    letter-spacing: 10px;
+    top: 10px;
+    left: 35%;
+    font-size: 30px;
+  }
+
+  .price_main ul {
+    position: relative;
+    top: 15px;
+    left: 3%;
+  }
+
+  .price_main ul li a {
+    font-size: 10px;
+    margin-bottom: 5px;
+  }
+
+
+  .price {
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 450px;
+  }
+
+  .price_page_1,
+  .price_page_2,
+  .price_page_3,
+  .price_page_4,
+  .price_page_5,
+  .price_page_6,
+  .price_page_7 {
+    width: 100%;
+    height: 450px;
+    flex-direction: column;
+  }
+
+  .price_page_1 span:nth-child(1),
+  .price_page_2 span:nth-child(1),
+  .price_page_3 span:nth-child(1),
+  .price_page_4 span:nth-child(1),
+  .price_page_5 span:nth-child(1),
+  .price_page_6 span:nth-child(1),
+  .price_page_7 span:nth-child(1) {
+    width: 100%;
+    height: 100px;
+    margin-left: 0px;
+  }
+
+  .price_page_1 span:nth-child(2),
+  .price_page_2 span:nth-child(2),
+  .price_page_3 span:nth-child(2),
+  .price_page_4 span:nth-child(2),
+  .price_page_5 span:nth-child(2),
+  .price_page_6 span:nth-child(2),
+  .price_page_7 span:nth-child(2) {
+    width: 100%;
+    height: 350px;
+    margin-left: 0px;
+  }
+
+  .price span ul {
+    margin-top: 10px;
+    margin-left: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+
+  .price span ul li {
+    margin-left: 0px;
+    font-size: 10px;
+    letter-spacing: 2px;
+    line-height: 20px;
+  }
+
+
+  .price span i {
+    border: 0px solid #d86232;
+    height: 0px;
+    width: 0px;
+    border-radius: 0%;
+    margin-top: 10px;
+    font-size: 10px;
+    line-height: 20px;
+  }
+
+  .price span a {
+    font-size: 10px;
+    line-height: 15px;
+  }
+
+  /************************/
+  /********STOPKA**********/
+  /************************/
+
+  footer {
+    background-color: black;
+    height: auto;
+    width: 100%;
+    flex-direction: column;
+    font-size: 14px;
+
+  }
+
+  .footer_wraper {
+    margin-top: 5px;
+    flex-direction: column;
+  }
+
+  .footer_adress {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    margin-left: 0px;
+    margin-top: 5px;
+    line-height: 20px;
+  }
+
+  .footer_price {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5px;
+    height: 100px;
+    line-height: 10px;
+  }
+
+  .footer_price h1 {
+    font-size: 18px;
+    margin-bottom: 5px;
+    letter-spacing: 2px;
+  }
+
+  .footer_price ul {
+    font-size: 14px;
+    line-height: 15px;
+  }
+
+  .footer_email {
+    flex-direction: column;
+    flex-grow: 1;
+    flex-basis: 5%;
+    margin: 0px 0px 0px 0px;
+    line-height: 15px;
+  }
+
+  .footer_email div {
+    margin-top: 10px;
+    letter-spacing: 10px;
+  }
+
+  .footer_email i {
+    font-size: 30px;
+  }
+
+  .footer_email a[Alt_title]:after {
+    font-size: 10px;
+  }
+
+  .footer_email a[alt_title] {
+    position: relative;
+  }
+
+  .footer_allrights {
+    background-color: black;
+    height: 5vh;
+    margin: 10px 10px 5px 10px;
+  }
+
+  .footer_map {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .footer_map img {
+    justify-items: center;
+    width: 85%;
+  }
+}
+
 
 
 @media screen and (min-width: 786px) and (max-width: 1070px) {}
