--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,6 @@ nav ul li a i {
   display: flex;
   position: relative;
   background-color: white;
-
   height: 90vh;
   color: black;
 }
@@ -959,14 +958,12 @@ footer {
 /*****ELEMENTY HTML*******************/
 /*************************************/
 
-@media screen and (max-width: 300px) {
+@media all and (max-width: 590px) {
   body {
-    width: 300px;
+    width: 100%;
     font-size: 6px;
     flex-direction: column;
   }
-
-
 
   main {
     flex-direction: column;
@@ -975,19 +972,24 @@ footer {
   section {
     flex-direction: column;
     margin-left: 0px;
-    width: 300px;
+    width: 100%;
   }
 
 
   aside {
     flex-basis: 30%;
+    margin: 0%;
+  }
+
+  aside img {
+    background-color: white;
+    width: 50vw;
   }
 
   nav {
     display: flex;
     flex-basis: 100%;
     justify-content: center;
-
     margin-left: 0%;
     align-items: center;
   }
@@ -1015,14 +1017,14 @@ footer {
 
 .main_wraper {
   display: flex;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 600px;
 }
 
 .main_wraper img {
   display: flex;
   right: 0%;
-  width: 300px;
+  width: 100%;
 }
 
 .main_wraper div {
@@ -1040,7 +1042,7 @@ footer {
 .about_me_wraper {
   display: flex;
   align-items: center;
-  width: 300px;
+  width: 100%;
   height: 450px;
   flex-direction: column;
 }
@@ -1049,7 +1051,7 @@ footer {
 
 
   margin-left: 0%;
-  width: 300px;
+  width: 100%;
   height: 100px;
 }
 
@@ -1072,7 +1074,7 @@ footer {
 }
 
 .about_me_txt {
-  width: 300px;
+  width: 100%;
   transform: translate(0%, 0%);
 }
 
@@ -1092,14 +1094,14 @@ footer {
   /************************/
 
   .galery_wraper {
-    width: 300px;
+    width: 100%;
     height: 1200px;
     flex-direction: column;
 
   }
 
   .galery_main {
-    width: 300px;
+    width: 100%;
     height: 300px;
   }
 
@@ -1130,7 +1132,7 @@ footer {
 
 
   .galery {
-    width: 300px;
+    width: 100%;
     height: 2600px;
     flex-wrap: wrap;
     /* flex-direction: column; */
@@ -1153,7 +1155,7 @@ footer {
   .galery_page_3 span,
   .galery_page_4 span {
     display: flex;
-    width: 270px;
+    width: 95vw;
     height: 55%;
     margin-top: 5px;
     background-color: #BBBBBB;
@@ -1168,18 +1170,18 @@ footer {
 
 
   .serwises_wraper {
-    width: 300px;
+    width: 100%;
     height: 1200px;
     flex-direction: column-reverse;
   }
 
   .serwises {
-    width: 300px;
+    width: 100%;
     height: 950px;
   }
 
   .serwises_main {
-    width: 300px;
+    width: 100%;
     height: 200px;
   }
 
@@ -1226,7 +1228,7 @@ footer {
   .serwises_page_6 h1,
   .serwises_page_7 h1 {
     height: 30px;
-    width: 300px;
+    width: 100%;
     text-align: center;
     margin-top: 10px;
     font-size: 10px;
@@ -1241,7 +1243,7 @@ footer {
   .serwises_page_6 span,
   .serwises_page_7 span {
     font-size: 10px;
-    width: 280px;
+    width: 90%;
     height: 100px;
     padding: 5px;
     line-height: 15px;
@@ -1256,7 +1258,7 @@ footer {
   .serwises_page_7 span h1 {
     font-size: 12px;
     margin-bottom: 4px;
-    width: 300px;
+    width: 100%;
   }
 
   .serwises_page_1 span i,
@@ -1276,7 +1278,7 @@ footer {
   /************************/
 
   #price {
-    width: 300px;
+    width: 100%;
     margin: 0;
 
   }
@@ -1284,13 +1286,13 @@ footer {
   .price_wraper {
     margin-top: 5px;
     flex-direction: column;
-    width: 300px;
+    width: 100%;
     height: 700px;
 
   }
 
   .price_main {
-    width: 300px;
+    width: 100%;
     height: 200px;
     margin-left: 0;
     flex-direction: row;
@@ -1326,7 +1328,7 @@ footer {
   .price {
     flex-direction: column;
     flex-wrap: wrap;
-    width: 300px;
+    width: 100%;
     height: 450px;
   }
 
@@ -1337,7 +1339,7 @@ footer {
   .price_page_5,
   .price_page_6,
   .price_page_7 {
-    width: 300px;
+    width: 100%;
     height: 450px;
     flex-direction: column;
   }
@@ -1349,7 +1351,7 @@ footer {
   .price_page_5 span:nth-child(1),
   .price_page_6 span:nth-child(1),
   .price_page_7 span:nth-child(1) {
-    width: 300px;
+    width: 100%;
     height: 100px;
     margin-left: 0px;
   }
@@ -1361,7 +1363,7 @@ footer {
   .price_page_5 span:nth-child(2),
   .price_page_6 span:nth-child(2),
   .price_page_7 span:nth-child(2) {
-    width: 300px;
+    width: 100%;
     height: 350px;
     margin-left: 0px;
   }
@@ -1405,8 +1407,8 @@ footer {
   footer {
 
     background-color: black;
-    height: 520px;
-    width: 300px;
+    height: auto;
+    width: 100%;
     flex-direction: column;
     font-size: 12px;
 
@@ -1421,7 +1423,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 0%;
+    height: 15vh;
     margin-left: 0px;
     margin-top: 0px;
     line-height: 10px;
@@ -1473,7 +1475,7 @@ footer {
 
   .footer_allrights {
     background-color: black;
-    height: 10vh;
+    height: auto;
     margin: 10px 10px 5px 10px;
   }
 
@@ -1493,7 +1495,7 @@ footer {
 /*****komórka 2*******************/
 /*************************************/
 
-@media screen and (min-width: 591px) and (max-width: 785px) {
+@media all and (min-width: 591px) and (max-width: 785px) {
 
   body {
     width: 100%;
@@ -1512,7 +1514,7 @@ footer {
   }
 
   aside {
-    flex-basis: 30%;
+    margin: 0%;
   }
 
   nav {
@@ -1547,7 +1549,8 @@ footer {
 .main_wraper {
   display: flex;
   width: 100%;
-  height: 400px;
+  height: auto;
+  flex-grow: 1;
 }
 
 .main_wraper img {
@@ -1572,7 +1575,7 @@ footer {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 600px;
+  height: 400px;
   flex-direction: column;
 }
 
@@ -2002,7 +2005,7 @@ footer {
 
   .footer_allrights {
     background-color: black;
-    height: 5vh;
+    height: auto;
     margin: 10px 10px 5px 10px;
   }
 
