--- a/css/style.css
+++ b/css/style.css
@@ -1516,7 +1516,10 @@ footer {
   aside {
     margin: 0%;
   }
-
+  aside img {
+    max-width: 60%;
+    width: 60%;
+  }
   nav {
     display: flex;
     flex-basis: 100%;
@@ -1576,7 +1579,7 @@ footer {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 400px;
+  height: 450px;
   flex-direction: column;
 }
 
@@ -1587,17 +1590,18 @@ footer {
 }
 
 .about_me_main h1 {
-  top: 5%;
-  left: 15%;
+  font-size: 40px;
+    top: 35%;
+    left: 30%;
 }
 
 .about_me_main p {
   vertical-align: initial;
-  top: 10px;
-  left: 10px;
-  transform: rotate(0deg);
+  top: 35%;
+    left: 40%;
+    font-size: 40px;
+  transform: rotate(0deg) ;
   letter-spacing: 10px;
-  position: absolute;
 }
 
 .about_me_img {
@@ -1605,7 +1609,8 @@ footer {
 }
 
 .about_me_txt {
-  width: 100%;
+  margin-top: 10px;
+  width: 80%;
   transform: translate(0%, 0%);
 }
 
@@ -1637,19 +1642,23 @@ footer {
   }
 
   .galery_main h1 {
-    top: 5%;
+    font-size: 40px;
+      top: 10%;
+      left: 30%;
   }
 
   .galery_main p {
     vertical-align: initial;
-    top: 10px;
-    left: 10px;
+    top: 10%;
+      left: 40%;
+      font-size: 40px;
     transform: rotate(0deg);
     letter-spacing: 10px;
   }
 
+
   .galery_main ul {
-    top: 30%;
+    top: 40%;
     left: 5%;
   }
 
@@ -1702,42 +1711,43 @@ footer {
 
   .serwises_wraper {
     width: 100%;;
-    height: 1200px;
+    height: 1600px;
     flex-direction: column-reverse;
   }
 
   .serwises {
     width: 100%;
-    height: 950px;
+    height: 1300px;
   }
 
   .serwises_main {
     width: 100%;
-    height: 200px;
+    height: 230px;
   }
 
   .serwises_main h1 {
-    top: 5%;
-    left: 15%;
+    font-size: 40px;
+    top: 10%;
+    left: 30%;
   }
 
   .serwises_main p {
     vertical-align: initial;
-    top: 1%;
-    left: 15%;
+    top: 10%;
+    left: 40%;
+    font-size: 40px;
     transform: rotate(0deg);
     letter-spacing: 10px;
   }
 
   .serwises_main ul {
     flex-direction: column;
-    top: 30%;
+    top: 35%;
     left: 5%;
   }
 
-
   .serwises_main ul li a {
-    font-size: 10px;
+    font-size: 12px;
     margin-bottom: 5px;
   }
 
@@ -1762,7 +1772,7 @@ footer {
     width: 100%;
     text-align: center;
     margin-top: 10px;
-    font-size: 10px;
+    font-size: 14px;
     align-self: center;
   }
 
@@ -1773,11 +1783,12 @@ footer {
   .serwises_page_5 span,
   .serwises_page_6 span,
   .serwises_page_7 span {
-    font-size: 10px;
-    width: 85%;
-    height: 100px;
+    font-size: 12px;
+    width: 70%;
+    height: 10vh;
     padding: 5px;
     line-height: 15px;
+    margin-bottom: 10px;
   }
 
   .serwises_page_1 span h1,
@@ -1824,34 +1835,35 @@ footer {
 
   .price_main {
     width: 100%;
-    height: 200px;
+    height: 250px;
     margin-left: 0;
     flex-direction: row;
   }
 
   .price_main h1 {
-    font-size: 30px;
-    top: 10px;
-    left: 20%;
+    font-size: 40px;
+    top: 10%;
+    left: 30%;
   }
 
   .price_main p {
     vertical-align: initial;
     transform: rotate(0deg);
     letter-spacing: 10px;
-    top: 10px;
-    left: 35%;
-    font-size: 30px;
+    top: 10%;
+    left: 40%;
+    font-size: 40px;
   }
+
 
   .price_main ul {
     position: relative;
-    top: 15px;
-    left: 3%;
+    top: 15%;
+    left: 5%;
   }
 
   .price_main ul li a {
-    font-size: 10px;
+    font-size: 12px;
     margin-bottom: 5px;
   }
 
@@ -1882,7 +1894,7 @@ footer {
   .price_page_5 span:nth-child(1),
   .price_page_6 span:nth-child(1),
   .price_page_7 span:nth-child(1) {
-    width: 100%;
+    width: 90%;
     height: 100px;
     margin-left: 0px;
   }
@@ -1894,7 +1906,7 @@ footer {
   .price_page_5 span:nth-child(2),
   .price_page_6 span:nth-child(2),
   .price_page_7 span:nth-child(2) {
-    width: 100%;
+    width: 90%;
     height: 350px;
     margin-left: 0px;
   }
@@ -1910,7 +1922,7 @@ footer {
 
   .price span ul li {
     margin-left: 0px;
-    font-size: 10px;
+    font-size: 12px;
     letter-spacing: 2px;
     line-height: 20px;
   }
@@ -1922,12 +1934,12 @@ footer {
     width: 0px;
     border-radius: 0%;
     margin-top: 10px;
-    font-size: 10px;
+    font-size: 12px;
     line-height: 20px;
   }
 
   .price span a {
-    font-size: 10px;
+    font-size: 12px;
     line-height: 15px;
   }
 
