--- a/css/style.css
+++ b/css/style.css
@@ -2351,7 +2351,7 @@ footer {
     margin-top: 15px;
     line-height: 20px;
     flex-basis: 20%;
-    height: 30vh;
+    height: auto;
     text-align: left;
   }
 
@@ -2359,7 +2359,7 @@ footer {
     display: flex;
     flex-direction: column;
     flex-basis: 20%;
-    height: 30vh;
+    height: auto;
     margin: 10px;
     line-height: 24px;
   }
@@ -2380,7 +2380,7 @@ footer {
     flex-basis: 30%;
     margin: 10px 20px 0px 20px;
     line-height: 20px;
-    height: 30vh;
+    height: auto;
   }
 
   .footer_email div {
@@ -2411,7 +2411,7 @@ footer {
 
   .footer_map {
     flex-basis: 30%;
-    height: 30vh;
+    height: auto;
   }
 
 
