--- a/css/style.css
+++ b/css/style.css
@@ -993,8 +993,9 @@ footer {
 
   .main_wraper {
     display: flex;
-    width: 100%;
-    height: calc(100vw - 2vh);
+    min-height: 60vh;
+    max-height: 100vh;
+    height: calc(100vw - 10vh);
   }
 
   .main_wraper img {
@@ -1537,8 +1538,9 @@ footer {
 
   .main_wraper {
     display: flex;
-    width: 100%;
-    height: calc(100vw - 5vh);
+    min-height: 60vh;
+    max-height: 70vh;
+    height: calc(50vw - 10vh);
   }
 
   .main_wraper img {
